# qtUuidFactory

./: CMakeLists.txt  README.md
include/: MyUuidWidget.h
src/: MyUuidWidget.cpp  MyUuidWidget.ui  main.cpp
